<resources>
    <string name="app_name">UserApp</string>
    <string name="hello_android">Hello Android!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_button_text">Menu</string>

    <!-- string resources for menu -->
    <string name="server_connection">MQTT Server Connection</string>
    <string name="edge_ip_text_view">Server IP</string>
    <string name="edge_port_text_view">Server Port</string>
    <string name="start_mqtt_service">Start Transmission</string>
    <string name="menu_activity_label">Menu</string>
    <string name="back_button">Back</string>

    <string name="gps_configuration_title">GPS Configuration</string>
    <string name="auto_gps_choice">Auto</string>
    <string name="manual_gps_choice">Manual</string>
    <string name="exit_app_button">Exit App</string>

    <string name="device_id_hint">Device ID (eg Usr1/)</string>
    <string name="recent_alerts_icon">recent alerts icon</string>
    <string name="recent_alert">Recent Alert</string>
    <string name="severity">Severity:</string>
    <string name="distance">Distance:</string>
    <string name="received">Received:</string>
    <string name="no_recent_alerts">No recent alerts</string>
    <string name="emergency_alert">⚠️ EMERGENCY ALERT!</string>
    <string name="dismiss">DISMISS</string>
    <string name="stop_transmission">Stop Transmission</string>
    <string name="gps_configuration">GPS Configuration</string>
    <string name="transmission_duration_seconds">Transmission Duration (seconds):</string>
    <string name="enter_seconds">Enter seconds</string>
    <string name="manual">Manual</string>
</resources>